test/analyzer/input_programs/invalid_programs/program25.tea
f := (x, y) ->
  x + y
end

# all fine and dandy since the appropriate
# number of args are given
f(1,2)

# oh noes!! too many args
f(1,2,3)